--- a/scss/main.css
+++ b/scss/main.css
@@ -1,2 +1,4 @@
 @import url(bootstrap.min.css);
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
 /*# sourceMappingURL=main.css.map */
