--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -6,7 +6,6 @@
 
 html, body{
     width: 100%;
-    height: 100%;
 }
 
 body{
@@ -14,7 +13,91 @@ body{
 }
 
 .container{
-    width: 500px;
-    height: 500px;
-    border: 1px solid red;
+    width: 1100px;
+    height: 430px;
+    margin-top: 120px;
+    padding: 0;
+    background-color: var(--Dark-desaturated-blue);
+    border-radius: 7px;
+    display: flex;
+
+    .left{
+        width: 50%;
+        border-top-left-radius: 7px;
+        border-bottom-left-radius: 7px;
+        color: white;
+
+        .text{
+            text-align: left;
+            padding: 60px;
+            
+            .title{
+                @include fontLexendDeca;
+                font-size: 35px;
+                font-weight: 700;
+
+                span{
+                    color: var(--Soft-violet);
+                }
+            }
+
+            .subTitle{
+                margin-top: 25px;
+                @include fontInter;
+                font-weight: 400;
+                color: var(--Slightly-transparent-white);
+            }
+        }
+
+        .grid{
+            text-align: left;
+            padding: 60px;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+
+            .item{
+                margin-top: -40px;
+                @include fontInter;
+                font-weight: 700;
+                font-size: 25px;
+                color: var(--White);
+
+                p{
+                    margin: -10px 0;
+                    padding: 0;
+                }
+
+                span{
+                    font-weight: 400;
+                    color: var(--Slightly-transparent-white1);
+                    font-size: 12px;
+                    text-transform: uppercase;
+                }
+            }
+
+            .item:nth-child(3){
+                text-transform: uppercase;
+            }
+        }
+    }
+
+    .right{
+        background-image: url(/images/image-header-desktop.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 50%;
+        height: 100%;
+        border-top-right-radius: 7px;
+        border-bottom-right-radius: 7px;
+        overflow: hidden;
+
+        .overlay{
+            width: 100%;
+            height: 100%;
+            background: var(--Soft-violet);
+            overflow: hidden;
+            z-index: 2;
+            opacity: 0.5;
+        }
+    }
 }
