--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,10 +1,10 @@
 :root{
-    --Very-dark-blue: hsl(233, 47%, 7%)
-    --Dark-desaturated-blue (card background): hsl(244, 38%, 16%)
-    --Soft-violet: hsl(277, 64%, 61%)
-    --White: hsl(0, 0%, 100%)
-    --Slightly-transparent-white: hsla(0, 0%, 100%, 0.75)
-    --Slightly-transparent-white: hsla(0, 0%, 100%, 0.6)
+    --Very-dark-blue: hsl(233, 47%, 7%);
+    --Dark-desaturated-blue: hsl(244, 38%, 16%);
+    --Soft-violet: hsl(277, 64%, 61%);
+    --White: hsl(0, 0%, 100%);
+    --Slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
+    --Slightly-transparent-white1: hsla(0, 0%, 100%, 0.6);
 }
 
 @mixin fontInter{
