--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,122 @@
 @import url(bootstrap.min.css);
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap');
+:root {
+  --Very-dark-blue: hsl(233, 47%, 7%);
+  --Dark-desaturated-blue: hsl(244, 38%, 16%);
+  --Soft-violet: hsl(277, 64%, 61%);
+  --White: hsl(0, 0%, 100%);
+  --Slightly-transparent-white: hsla(0, 0%, 100%, 0.75);
+  --Slightly-transparent-white1: hsla(0, 0%, 100%, 0.6);
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+}
+
+body {
+  background-color: var(--Very-dark-blue);
+}
+
+.container {
+  width: 1100px;
+  height: 430px;
+  margin-top: 120px;
+  padding: 0;
+  background-color: var(--Dark-desaturated-blue);
+  border-radius: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.container .left {
+  width: 50%;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  color: white;
+}
+
+.container .left .text {
+  text-align: left;
+  padding: 60px;
+}
+
+.container .left .text .title {
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 15px;
+  font-size: 35px;
+  font-weight: 700;
+}
+
+.container .left .text .title span {
+  color: var(--Soft-violet);
+}
+
+.container .left .text .subTitle {
+  margin-top: 25px;
+  font-family: 'Inter', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: var(--Slightly-transparent-white);
+}
+
+.container .left .grid {
+  text-align: left;
+  padding: 60px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.container .left .grid .item {
+  margin-top: -40px;
+  font-family: 'Inter', sans-serif;
+  font-size: 15px;
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--White);
+}
+
+.container .left .grid .item p {
+  margin: -10px 0;
+  padding: 0;
+}
+
+.container .left .grid .item span {
+  font-weight: 400;
+  color: var(--Slightly-transparent-white1);
+  font-size: 12px;
+  text-transform: uppercase;
+}
+
+.container .left .grid .item:nth-child(3) {
+  text-transform: uppercase;
+}
+
+.container .right {
+  background-image: url(/images/image-header-desktop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 50%;
+  height: 100%;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+  overflow: hidden;
+}
+
+.container .right .overlay {
+  width: 100%;
+  height: 100%;
+  background: var(--Soft-violet);
+  overflow: hidden;
+  z-index: 2;
+  opacity: 0.5;
+}
 /*# sourceMappingURL=main.css.map */
