--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -15,7 +15,7 @@ body{
 .container{
     width: 1100px;
     height: 430px;
-    margin-top: 120px;
+    margin-top: 70px;
     padding: 0;
     background-color: var(--Dark-desaturated-blue);
     border-radius: 7px;
@@ -30,6 +30,7 @@ body{
         .text{
             text-align: left;
             padding: 60px;
+            padding-bottom: 20px;
             
             .title{
                 @include fontLexendDeca;
@@ -51,7 +52,8 @@ body{
 
         .grid{
             text-align: left;
-            padding: 60px;
+            padding: 0px 60px;
+            margin-top: 18%;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
 
