--- a/scss/main.css
+++ b/scss/main.css
@@ -26,7 +26,7 @@ body {
 .container {
   width: 1100px;
   height: 430px;
-  margin-top: 120px;
+  margin-top: 70px;
   padding: 0;
   background-color: var(--Dark-desaturated-blue);
   border-radius: 7px;
@@ -45,6 +45,7 @@ body {
 .container .left .text {
   text-align: left;
   padding: 60px;
+  padding-bottom: 20px;
 }
 
 .container .left .text .title {
@@ -68,7 +69,8 @@ body {
 
 .container .left .grid {
   text-align: left;
-  padding: 60px;
+  padding: 0px 60px;
+  margin-top: 18%;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: (1fr)[3];
@@ -118,5 +120,61 @@ body {
   overflow: hidden;
   z-index: 2;
   opacity: 0.5;
+}
+
+@media screen and (max-width: 992px) {
+  .container .left .text {
+    padding: 30px;
+  }
+  .container .left .grid {
+    margin-top: 12%;
+    padding: 0 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    height: 700px;
+    text-align: center;
+    margin-bottom: 60px;
+    border-radius: 7px;
+  }
+  .container .left {
+    width: 100%;
+    height: 350px;
+    padding: 0;
+    border-radius: 0;
+    margin-top: 40px;
+  }
+  .container .left .text {
+    padding: 0px 15px;
+    text-align: center;
+  }
+  .container .left .grid {
+    text-align: center;
+    margin-top: 18%;
+  }
+  .container .right {
+    width: 100%;
+    height: 350px;
+    border-top-left-radius: 7px;
+    border-bottom-right-radius: 0px;
+  }
+}
+
+@media screen and (max-width: 578px) {
+  .container {
+    width: 90%;
+  }
+}
+
+@media screen and (max-width: 403px) {
+  .container .left .text .subTitle {
+    margin-top: 2px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
