--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -103,3 +103,21 @@ body{
         }
     }
 }
+
+header{
+    padding: 0;
+    background-color: var(--Soft-violet);
+    
+    .attribution{
+        width: 100%;
+       text-align: center;
+       padding: 0;
+
+        p{
+            color: whitesmoke;
+            a{
+                color: whitesmoke;
+            }
+        }
+    }
+}
